replaced project bootstrap buttons with github logos

--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
                                 <a href="https://html.com/" target="_blank">
+                                    <!-- git -->
                                     <!-- dup icon -->
                                     <i class="fab fa-html5"></i>
                                 </a>
@@ -288,8 +289,8 @@
                                 <div class="card-body">
                                     <h5 class="card-title projectLabel">TollTally</h5>
                                     <p class="card-text">information</p>
-                                    <a href="https://github.com/MR-Stan/Project1" class="btn btn-primary"
-                                        target="_blank">See the code</a>
+                                    <a href="https://github.com/MR-Stan/Project1" class="btn" target="_blank"><i
+                                            class="fab fa-github fa-2x"></i>
                                     </a>
                                 </div>
                             </div>
@@ -307,8 +308,8 @@
                                 <div class="card-body">
                                     <h5 class="card-title projectLabel">StarWars RPG</h5>
                                     <p class="card-text">information</p>
-                                    <a href="https://github.com/MR-Stan/unit-4-game" class="btn btn-primary"
-                                        target="_blank">See the code
+                                    <a href="https://github.com/MR-Stan/unit-4-game" class="btn" target="_blank"><i
+                                            class="fab fa-github fa-2x"></i>
                                     </a>
                                 </div>
                             </div>
@@ -326,8 +327,8 @@
                                 <div class="card-body">
                                     <h5 class="card-title projectLabel">Train Scheduler</h5>
                                     <p class="card-text">information</p>
-                                    <a href="https://github.com/MR-Stan/Train-Scheduler" class="btn btn-primary"
-                                        target="_blank">See the code
+                                    <a href="https://github.com/MR-Stan/Train-Scheduler" class="btn" target="_blank"><i
+                                            class="fab fa-github fa-2x"></i>
                                     </a>
                                 </div>
                             </div>
@@ -352,8 +353,8 @@
                                 <div class="card-body">
                                     <h5 class="card-title projectLabel">GifTastic</h5>
                                     <p class="card-text">information</p>
-                                    <a href="https://github.com/MR-Stan/GifTastic" class="btn btn-primary"
-                                        target="_blank">See the code
+                                    <a href="https://github.com/MR-Stan/GifTastic" class="btn" target="_blank"><i
+                                            class="fab fa-github fa-2x"></i>
                                     </a>
                                 </div>
                             </div>
@@ -371,8 +372,8 @@
                                 <div class="card-body">
                                     <h5 class="card-title projectLabel">Random Trivia Game</h5>
                                     <p class="card-text">information</p>
-                                    <a href="https://github.com/MR-Stan/TriviaGame" class="btn btn-primary"
-                                        target="_blank">See the code
+                                    <a href="https://github.com/MR-Stan/TriviaGame" class="btn" target="_blank"><i
+                                            class="fab fa-github fa-2x"></i>
                                     </a>
                                 </div>
                             </div>
@@ -390,7 +391,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title projectLabel">Coming Soon</h5>
                                     <p class="card-text">information</p>
-                                    <a href="" class="btn btn-primary" target="_blank">See the code
+                                    <a href="" class="btn" target="_blank"><i class="fab fa-github fa-2x"></i>
                                     </a>
                                 </div>
                             </div>
