completed contact form style, add buttons to call and email from the browser

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
 <!-- navbar -->
 <nav class="navbar navbar-expand-md fixed-top bg-dark content hide">
     <a class="navbar-brand white" href="index.html">Mike Stanley</a>
+    <a class="navbar-brand white" href="https://github.com/MR-Stan" target="_blank">
+        <i class="fab fa-github"></i>
+    </a>
+    <a class="navbar-brand white" href="https://www.linkedin.com/in/MR-Stan" target="_blank">
+        <i class="fab fa-linkedin"></i>
+    </a>
     <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarToggler02"
         aria-controls="navbarToggler02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -124,7 +130,7 @@
                                     <!-- css icon -->
                                     <i class="fab fa-css3-alt"></i>
                                 </a>
-                                <figcaption>CSS</figcaption>
+                                <figcaption>CSS3</figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
@@ -133,16 +139,16 @@
                                     <!-- html icon -->
                                     <i class="fab fa-html5"></i>
                                 </a>
-                                <figcaption>HTML</figcaption>
+                                <figcaption>HTML5</figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <a href="https://www.python.org/" target="_blank">
+                                <a href="" target="_blank">
                                     <!-- python icon -->
-                                    <i class="fab fa-python"></i>
+                                    <i class="fab fa-git-alt"></i>
                                 </a>
-                                <figcaption>Python</figcaption>
+                                <figcaption>Git</figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
@@ -160,7 +166,7 @@
                                     <!-- nodejs icon-->
                                     <i class="fab fa-node-js"></i>
                                 </a>
-                                <Figcaption>nodeJS</Figcaption>
+                                <Figcaption>Node.js</Figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
@@ -174,48 +180,11 @@
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <a href="https://html.com/" target="_blank">
-                                    <!-- git -->
-                                    <!-- dup icon -->
-                                    <i class="fab fa-html5"></i>
-                                </a>
-                                <figcaption>HTML</figcaption>
-                            </figure>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-6">
-                            <figure>
-                                <a href="https://www.python.org/" target="_blank">
-                                    <!-- dup icon -->
+                                <a href="" target="_blank">
+                                    <!-- python -->
                                     <i class="fab fa-python"></i>
                                 </a>
                                 <figcaption>Python</figcaption>
-                            </figure>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-6">
-                            <figure>
-                                <a href="https://www.javascript.com/" target="_blank">
-                                    <!-- dup icon -->
-                                    <i class="fab fa-js-square"></i>
-                                </a>
-                                <figcaption>JavaScript</figcaption>
-                            </figure>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-6">
-                            <figure>
-                                <a href="https://nodejs.org/en/" target="_blank">
-                                    <!-- dup icon-->
-                                    <i class="fab fa-node-js"></i>
-                                </a>
-                                <Figcaption>nodeJS</Figcaption>
-                            </figure>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-6">
-                            <figure>
-                                <a href="https://www.npmjs.com/" target="_blank">
-                                    <!-- dup icon-->
-                                    <i class="fab fa-npm"></i>
-                                </a>
-                                <figcaption>npm</figcaption>
                             </figure>
                         </div>
                     </div>
@@ -281,7 +250,7 @@
 
                         <!-- TollTally -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <a href="https://mr-stan.github.io/Project1/" target="_blank">
                                         <img class="card-image-top embed-responsive-item"
@@ -301,7 +270,7 @@
 
                         <!-- Star Wars RPG -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <a href="https://mr-stan.github.io/unit-4-game/" target="_blank">
                                         <img class="card-image-top embed-responsive-item"
@@ -320,7 +289,7 @@
 
                         <!-- Train Scheduler -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <a href="https://mr-stan.github.io/Train-Scheduler/" target="_blank">
                                         <img class="card-image-top embed-responsive-item" src="assets/images/train.PNG"
@@ -345,7 +314,7 @@
 
                         <!-- GifTastic -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <a href="https://mr-stan.github.io/GifTastic/" target="_blank">
                                         <img class="card-image-top embed-responsive-item"
@@ -365,7 +334,7 @@
 
                         <!-- Trivia Game -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <a href="https://mr-stan.github.io/TriviaGame/" target="_blank">
                                         <img class="card-image-top embed-responsive-item" src="assets/images/trivia.PNG"
@@ -384,7 +353,7 @@
 
                         <!-- Coming Soon -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <a href="" target="_blank">
                                         <img class="card-image-top embed-responsive-item"
@@ -417,32 +386,31 @@
         <!-- all content goes in centered column below -->
         <div class="col-xs-12 col-sm-10 col-md-8">
             <div class="card text-center main-card">
+                <h1 class="card-header">Contact</h1>
                 <div class="card-body">
-                    <!-- card heading -->
-                    <h1 class="card-header">Contact</h1>
                     <!-- contact information -->
                     <p class="card-text">
-                        <h4>Phone: (214) 208-9815</h4>
-                        <h4>Email: MichaelRStanley87@gmail.com</h4>
-
+                        <h4><a href="tel:+2142089815" class="connect"><i class="fas fa-mobile-alt connectIcon"></i></a>
+                            (214)208-9815</h4>
+                        <h4><a href="mailto:michaelrstanley87@gmail.com" class="connect"><i
+                                    class="fas fa-envelope connectIcon"></i></a>
+                            MichaelRStanley87@gmail.com</h4>
                         <!-- social links -->
-
-                        <div class="col" id="gitHub">
+                        <h4>
                             <a href="https://github.com/MR-Stan" target="_blank">
                                 <!-- github icon -->
-                                <i class="fab fa-github"></i>
+                                <i class="fab fa-github fa-lg connectIcon"></i>
                             </a>
-                        </div>
-                        <div class="col" id="linkedIn">
+
                             <a href="https://www.linkedin.com/in/MR-Stan" target="_blank">
                                 <!-- linkedin icon -->
-                                <i class="fab fa-linkedin"></i>
+                                <i class="fab fa-linkedin fa-lg connectIcon"></i>
                             </a>
-                        </div>
+                        </h4>
                     </p>
                     <!-- form to send message to firebase -->
-                    <div class="card text-left">
-                        <div class="card-body">
+                    <div class="card text-left roundCorner">
+                        <div class="card-body" id="contactForm">
                             <form>
                                 <div class="form-group">
                                     <label for="Name">Name:</label>
