--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 
 <!-- about -->
 <a id="about"></a>
+<br>
+<br>
 <div class="container-fluid content hide">
     <div class="row">
         <!-- margin -->
@@ -77,7 +79,7 @@
                     <div class="row">
                         <div class="col-sm-3">
                             <div id="myPicture">
-                                <img src="assets/images/profilePic.JPG" alt="Profile Pic" class="img-thumbnail">
+                                <img src="assets/images/me.jpg" alt="Profile Pic" class="img-thumbnail">
                             </div>
                         </div>
                         <div class="col-sm-6">
@@ -105,6 +107,8 @@
 
 <!-- skills -->
 <a id="skills"></a>
+<br>
+<br>
 <div class="container-fluid content hide">
     <div class="row">
         <!-- margin -->
@@ -198,6 +202,8 @@
 
 <!-- resume -->
 <a id="resume"></a>
+<br>
+<br>
 <div class="container-fluid content hide">
     <div class="row">
         <!-- margin -->
@@ -206,23 +212,23 @@
         <div class="col-xs-12 col-sm-10 col-md-8">
             <div class="card text-center main-card">
                 <h1 class="card-header">Resume</h1>
+                <div class="card-image-top">
+                    <embed id="resume" src="assets/resume/Mike Stanley Resume.pdf">
+                </div>
                 <div class="card-body">
-                    <div class="row">
-                        <!-- resume image here -->
-                        <div class="col">
-                            <!-- pdf -->
-                            <a href="" target="_blank">
-                                <i class="fas fa-file-pdf"></i>
-                            </a>
-                            <!-- download -->
-                            <a href="" target="_blank">
-                                <i class="fas fa-file-download"></i>
-                            </a>
-                            <!-- google drive -->
-                            <a href="" target="_blank">
-                                <i class="fab fa-google-drive"></i>
-                            </a>
-                        </div>
+                    <div class="card-text" id="resumeCardText">
+                        <!-- pdf -->
+                        <a href="" target="_blank">
+                            <i class="fas fa-file-pdf"></i>
+                        </a>
+                        <!-- download -->
+                        <a href="" target="_blank">
+                            <i class="fas fa-file-download"></i>
+                        </a>
+                        <!-- google drive -->
+                        <a href="" target="_blank">
+                            <i class="fab fa-google-drive"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -234,6 +240,8 @@
 
 <!-- projects -->
 <a id="projects"></a>
+<br>
+<br>
 <div class="container-fluid content hide">
     <div class="row">
         <!-- margin -->
@@ -379,6 +387,8 @@
 
 <!-- contact -->
 <a id="contact"></a>
+<br>
+<br>
 <div class="container-fluid content hide">
     <div class="row">
         <!-- margin -->
