updated about, linked and styled resume buttons

--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
                             </div>
                         </div>
                         <div class="col-sm-6">
-                            <div class="aboutParagraph">
-                                <p></p>
+                            <div id="aboutText">
+                                <p>I'm a full stack web developer living in Dallas, Texas.</p>
+                                <p>I enjoy speding my time learning, creating, and pushing my limits</p>
+                                <p>Contact me to find out more.</p>
                             </div>
                         </div>
                         <div class="col-sm-3">
@@ -217,18 +219,20 @@
                 </div>
                 <div class="card-body">
                     <div class="card-text" id="resumeCardText">
+                        <h4>
                         <!-- pdf -->
-                        <a href="" target="_blank">
-                            <i class="fas fa-file-pdf"></i>
+                        <a href="assets/resume/Mike Stanley Resume.pdf" target="_blank">
+                            <i class="fas fa-file-pdf fa-lg connectIcon"></i>    
                         </a>
                         <!-- download -->
-                        <a href="" target="_blank">
-                            <i class="fas fa-file-download"></i>
+                        <a href="assets/resume/Mike Stanley Resume.docx" target="_blank">
+                            <i class="fas fa-file-download fa-lg connectIcon"></i>
                         </a>
                         <!-- google drive -->
-                        <a href="" target="_blank">
-                            <i class="fab fa-google-drive"></i>
+                        <a href="https://drive.google.com/open?id=1GAaT9cr7mCTVRJEKK1G4dGDwc3eT1lt9" target="_blank">
+                            <i class="fab fa-google-drive fa-lg connectIcon"></i>
                         </a>
+                        </h4>
                     </div>
                 </div>
             </div>
