--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
                         </div>
                         <div class="col-sm-6">
                             <div id="aboutText">
+                                <br>
                                 <p>I'm a full stack web developer living in Dallas, Texas.</p>
-                                <p>I enjoy speding my time learning, creating, and pushing my limits</p>
+                                <p>When I'm not in the mountains or on a trail, I enjoy spending my time learning,
+                                    creating, and pushing my limits.</p>
                                 <p>Contact me to find out more.</p>
                             </div>
                         </div>
@@ -220,18 +222,19 @@
                 <div class="card-body">
                     <div class="card-text" id="resumeCardText">
                         <h4>
-                        <!-- pdf -->
-                        <a href="assets/resume/Mike Stanley Resume.pdf" target="_blank">
-                            <i class="fas fa-file-pdf fa-lg connectIcon"></i>    
-                        </a>
-                        <!-- download -->
-                        <a href="assets/resume/Mike Stanley Resume.docx" target="_blank">
-                            <i class="fas fa-file-download fa-lg connectIcon"></i>
-                        </a>
-                        <!-- google drive -->
-                        <a href="https://drive.google.com/open?id=1GAaT9cr7mCTVRJEKK1G4dGDwc3eT1lt9" target="_blank">
-                            <i class="fab fa-google-drive fa-lg connectIcon"></i>
-                        </a>
+                            <!-- pdf -->
+                            <a href="assets/resume/Mike Stanley Resume.pdf" target="_blank">
+                                <i class="fas fa-file-pdf fa-lg connectIcon"></i>
+                            </a>
+                            <!-- download -->
+                            <a href="assets/resume/Mike Stanley Resume.docx" target="_blank">
+                                <i class="fas fa-file-download fa-lg connectIcon"></i>
+                            </a>
+                            <!-- google drive -->
+                            <a href="https://drive.google.com/open?id=1GAaT9cr7mCTVRJEKK1G4dGDwc3eT1lt9"
+                                target="_blank">
+                                <i class="fab fa-google-drive fa-lg connectIcon"></i>
+                            </a>
                         </h4>
                     </div>
                 </div>
@@ -310,7 +313,12 @@
                                 </div>
                                 <div class="card-body project">
                                     <h5 class="card-title projectLabel">Train Scheduler</h5>
-                                    <p class="card-text">information</p>
+                                    <p class="card-text">This application is a user input based scheduler that utilizes
+                                        Firebase to retain the input information. It is themed as
+                                        a train scheduler, but it can easily be converted into a to-do list as well as a
+                                        variety of other applications. It was
+                                        created with HTML, CSS, Bootstrap, Javascript, jQuery, Moment.js, and Firebase.
+                                    </p>
                                     <a href="https://github.com/MR-Stan/Train-Scheduler" class="btn" target="_blank"><i
                                             class="fab fa-github fa-2x"></i>
                                     </a>
@@ -336,7 +344,13 @@
                                 </div>
                                 <div class="card-body project">
                                     <h5 class="card-title projectLabel">GifTastic</h5>
-                                    <p class="card-text">information</p>
+                                    <p class="card-text">GifTastic is a dynamic web page that utilizes the user's input
+                                        to create a corresponding button. When the user clicks
+                                        the button an AJAX call is made to the Giphy API and a specified number of gifs
+                                        are displayed. The gifs are initially
+                                        static, but can be played with a single click and paused again with an
+                                        additional click. This site was created with
+                                        HTML, CSS, JavaScript, and jQuery.</p>
                                     <a href="https://github.com/MR-Stan/GifTastic" class="btn" target="_blank"><i
                                             class="fab fa-github fa-2x"></i>
                                     </a>
