add information for several projects, updated readme

--- a/index.html
+++ b/index.html
@@ -275,7 +275,12 @@
                                 </div>
                                 <div class="card-body project">
                                     <h5 class="card-title projectLabel">TollTally</h5>
-                                    <p class="card-text">information</p>
+                                    <p class="card-text">This mobile responsive application allows the user to calculate
+                                        toll costs between two points. It was created with HTML,
+                                        CSS,Bootstrap, Javascript, jQuery, jQueryUI, Moment.js, and Firebase. The
+                                        following API's were used: TollGuru, Google
+                                        Directions, Google Distance Matrix, Google Geocoding, Google Maps Javascript,
+                                        and Google Places.</p>
                                     <a href="https://github.com/MR-Stan/Project1" class="btn" target="_blank"><i
                                             class="fab fa-github fa-2x"></i>
                                     </a>
@@ -294,7 +299,10 @@
                                 </div>
                                 <div class="card-body project">
                                     <h5 class="card-title projectLabel">StarWars RPG</h5>
-                                    <p class="card-text">information</p>
+                                    <p class="card-text">This application is a click based, Star Wars themed role
+                                        playing game (RPG). Select a hero to begin your journey and use
+                                        the force to defeat all enemies. It was created with HTML, CSS, Javascript, and
+                                        jQuery.</p>
                                     <a href="https://github.com/MR-Stan/unit-4-game" class="btn" target="_blank"><i
                                             class="fab fa-github fa-2x"></i>
                                     </a>
@@ -369,7 +377,9 @@
                                 </div>
                                 <div class="card-body project">
                                     <h5 class="card-title projectLabel">Random Trivia Game</h5>
-                                    <p class="card-text">information</p>
+                                    <p class="card-text">Random Trivia is a trivia game of random questions. It utilizes
+                                        timeouts and intervals to limit the user's time to
+                                        answer the questions. It was created with HTML, CSS, Javascript, and jQuery.</p>
                                     <a href="https://github.com/MR-Stan/TriviaGame" class="btn" target="_blank"><i
                                             class="fab fa-github fa-2x"></i>
                                     </a>
@@ -388,7 +398,7 @@
                                 </div>
                                 <div class="card-body project">
                                     <h5 class="card-title projectLabel">Coming Soon</h5>
-                                    <p class="card-text">information</p>
+                                    <p class="card-text">Stay tuned for updates</p>
                                     <a href="" class="btn" target="_blank"><i class="fab fa-github fa-2x"></i>
                                     </a>
                                 </div>
